--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "preact": "^10.0.0-rc.3"
+    "preact": "^10.0.0-rc.3",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/jasmine": "^3.4.0",
