--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "preact": "^10.0.0-rc.3",
-    "preact-router": "^2.6.1",
+    "preact-async-route": "^2.2.1",
+    "preact-router": "^3.0.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   },
@@ -27,8 +28,10 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/jasmine": "^3.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "karmatic": "^1.4.0",
     "webpack": "^4.40.0",
+    "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.8"
   }
 }
