--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/jasmine": "^3.4.0",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "karmatic": "^1.4.0",
     "webpack": "^4.40.0",
