Setup basic serving with serve

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 ##############################################
 
 lib/
-dist/
+
+# dist folder
+preact-integrations/
 
 ##############################################
 #
