--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./src/direct/webpack.config.js",
+    "serve": "serve",
     "test": "karmatic",
     "test:debug": "karmatic debug"
   },
@@ -30,6 +31,7 @@
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "karmatic": "^1.4.0",
+    "serve": "^11.1.0",
     "webpack": "^4.40.0",
     "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.8"
