--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collection of sample apps demonstrating Preact's compatibility with various 3rd party libraries",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production --config ./src/direct/webpack.config.js",
+    "build": "webpack --mode development --config ./src/direct/webpack.config.js",
     "serve": "serve",
     "test": "karmatic",
     "test:debug": "karmatic debug"
@@ -28,9 +28,19 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/jasmine": "^3.4.0",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
     "serve": "^11.2.0",
+    "size-plugin": "^2.0.0",
+    "terser-webpack-plugin": "^2.1.0",
     "webpack": "^4.40.0",
     "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.8"
