--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "mri": "^1.1.4",
     "node-sass": "^4.12.0",
+    "open": "^6.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
