--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "dev": "node ./scripts/dev.js",
-    "test": "karmatic",
-    "test:debug": "karmatic debug"
+    "test": "node ./scripts/test.js"
   },
   "keywords": [
     "preact",
@@ -28,17 +27,21 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/jasmine": "^3.4.0",
+    "@types/jest": "^24.0.18",
+    "@types/jest-environment-puppeteer": "^4.3.1",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mri": "^1.1.4",
     "node-sass": "^4.12.0",
-    "open": "^6.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "puppeteer": "^1.20.0",
     "sass-loader": "^8.0.0",
     "serve": "^11.2.0",
     "size-plugin": "^2.0.0",
@@ -46,5 +49,12 @@
     "webpack": "^4.40.0",
     "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.8"
+  },
+  "jest": {
+    "rootDir": "tests",
+    "preset": "jest-puppeteer",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "<rootDir>/lib/babelTransformer.js"
+    }
   }
 }
