--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A collection of sample apps demonstrating Preact's compatibility with various 3rd party libraries",
   "main": "index.js",
   "scripts": {
-    "build": "node ./scripts/build.js",
-    "dev": "node ./scripts/dev.js",
-    "test": "node ./scripts/test.js"
+    "build": "node ./scripts build",
+    "dev": "node ./scripts dev",
+    "test": "node ./scripts test"
   },
   "keywords": [
     "preact",
@@ -37,11 +37,11 @@
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "mri": "^1.1.4",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "puppeteer": "^1.20.0",
+    "sade": "^1.6.1",
     "sass-loader": "^8.0.0",
     "serve": "^11.2.0",
     "size-plugin": "^2.0.0",
