--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node ./scripts build",
     "dev": "node ./scripts dev",
-    "test": "node ./scripts test"
+    "test": "node ./scripts test",
+    "serve": "node ./scripts serve"
   },
   "keywords": [
     "preact",
@@ -33,6 +34,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "escape-string-regexp": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
