--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
