Style header to match preactjs.com

--- a/src/shared/config.json
+++ b/src/shared/config.json
@@ -3,18 +3,21 @@
 	"nav": [
 		{
 			"path": "/",
-			"name": "Preact Integrations"
+			"name": "Preact Integrations",
+			"title": "Home",
+			"class": "home",
+			"flair": "logo"
 		},
 		{
-			"path": "/direct",
+			"path": "/direct/",
 			"name": "Direct"
 		},
 		{
-			"path": "/direct-compat",
+			"path": "/direct-compat/",
 			"name": "Direct Compat"
 		},
 		{
-			"path": "/full-compat",
+			"path": "/full-compat/",
 			"name": "Full Compat"
 		}
 	]
