--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest-environment-puppeteer": "^4.3.1",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "classcat": "^4.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
