--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node ./scripts build",
     "dev": "node ./scripts dev",
-    "test": "node ./scripts test",
+    "test": "jest",
+    "test:debug": "cross-env PPTR_DEBUG=true jest",
     "serve": "node ./scripts serve"
   },
   "keywords": [
@@ -34,6 +35,7 @@
     "babel-loader": "^8.0.6",
     "classcat": "^4.0.2",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
     "file-loader": "^4.2.0",
