--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classcat": "^4.0.2",
     "classnames": "^2.2.6",
     "preact": "^10.0.0-rc.3",
+    "preact-redux": "^2.1.0",
     "preact-router": "^3.0.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
