--- a/package.json
+++ b/package.json
@@ -1,64 +1,71 @@
 {
-  "name": "preact-integrations",
-  "version": "0.0.1",
-  "description": "A collection of sample apps demonstrating Preact's compatibility with various 3rd party libraries",
-  "main": "index.js",
-  "scripts": {
-    "build": "node ./scripts build",
-    "dev": "node ./scripts dev",
-    "test": "jest",
-    "test:debug": "cross-env PPTR_DEBUG=true jest",
-    "serve": "node ./scripts serve"
-  },
-  "keywords": [
-    "preact",
-    "preact-compat"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "classcat": "^4.0.2",
-    "classnames": "^2.2.6",
-    "preact": "^10.0.0-rc.3",
-    "preact-router": "^3.0.1",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
-    "@types/jasmine": "^3.4.0",
-    "@types/jest": "^24.0.18",
-    "@types/jest-environment-puppeteer": "^4.3.1",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "jest-puppeteer": "^4.3.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "puppeteer": "^1.20.0",
-    "sade": "^1.6.1",
-    "sass-loader": "^8.0.0",
-    "serve": "^11.2.0",
-    "terser-webpack-plugin": "^2.1.0",
-    "webpack": "^4.40.0",
-    "webpack-bundle-analyzer": "^3.5.0",
-    "webpack-cli": "^3.3.8"
-  },
-  "jest": {
-    "rootDir": "tests",
-    "preset": "jest-puppeteer",
-    "transform": {
-      "^.+\\.[t|j]sx?$": "<rootDir>/babelTransformer.js"
-    }
-  }
+	"name": "preact-integrations",
+	"version": "0.0.1",
+	"description": "A collection of sample apps demonstrating Preact's compatibility with various 3rd party libraries",
+	"main": "index.js",
+	"scripts": {
+		"build": "node ./scripts build",
+		"dev": "node ./scripts dev",
+		"test": "jest",
+		"test:debug": "cross-env PPTR_DEBUG=true jest",
+		"serve": "node ./scripts serve"
+	},
+	"keywords": [
+		"preact",
+		"preact-compat"
+	],
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"classcat": "^4.0.2",
+		"classnames": "^2.2.6",
+		"preact": "^10.0.0-rc.3",
+		"preact-router": "^3.0.1",
+		"react-redux": "^7.1.1",
+		"redux": "^4.0.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.6.0",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/preset-env": "^7.6.0",
+		"@babel/preset-react": "^7.0.0",
+		"@types/jasmine": "^3.4.0",
+		"@types/jest": "^24.0.18",
+		"@types/jest-environment-puppeteer": "^4.3.1",
+		"autoprefixer": "^9.6.1",
+		"babel-loader": "^8.0.6",
+		"clean-webpack-plugin": "^3.0.0",
+		"cross-env": "^6.0.3",
+		"css-loader": "^3.2.0",
+		"file-loader": "^4.2.0",
+		"html-webpack-plugin": "^3.2.0",
+		"jest": "^24.9.0",
+		"jest-puppeteer": "^4.3.0",
+		"mini-css-extract-plugin": "^0.8.0",
+		"node-sass": "^4.12.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
+		"postcss-loader": "^3.0.0",
+		"prettier": "^1.18.2",
+		"puppeteer": "^1.20.0",
+		"sade": "^1.6.1",
+		"sass-loader": "^8.0.0",
+		"serve": "^11.2.0",
+		"terser-webpack-plugin": "^2.1.0",
+		"webpack": "^4.40.0",
+		"webpack-bundle-analyzer": "^3.5.0",
+		"webpack-cli": "^3.3.8"
+	},
+	"prettier": {
+		"singleQuote": true,
+		"trailingComma": "none",
+		"useTabs": true,
+		"tabWidth": 2
+	},
+	"jest": {
+		"rootDir": "tests",
+		"preset": "jest-puppeteer",
+		"transform": {
+			"^.+\\.[t|j]sx?$": "<rootDir>/babelTransformer.js"
+		}
+	}
 }
