--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
 		"css-loader": "^3.2.0",
 		"file-loader": "^4.2.0",
 		"html-webpack-plugin": "^3.2.0",
+		"husky": "^3.0.9",
 		"jest": "^24.9.0",
 		"jest-puppeteer": "^4.3.0",
+		"lint-staged": "^9.4.2",
 		"mini-css-extract-plugin": "^0.8.0",
 		"node-sass": "^4.12.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -60,6 +62,17 @@
 		"trailingComma": "none",
 		"useTabs": true,
 		"tabWidth": 2
+	},
+	"lint-staged": {
+		"**/*.{js,jsx,ts,tsx,json,css,scss}": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
 	},
 	"jest": {
 		"rootDir": "tests",
